...
      })}
    >
      <Tab.Screen 
        name="Home" 
        component={HomeScreen}
        options={{ 
          tabBarLabel: 'Inicio',
        }}
      />
      <Tab.Screen 
        name="Invoices" 
        component={InvoicesStack}
        options={{ 
...
